GNOME Bugzilla – Bug 669130
New Window defaults to page with stop icon showing
Last modified: 2012-02-09 11:12:30 UTC
Created attachment 206544 [details] screenshot When I do New Window in the menu I get a new browser window that has the stop button showing.
True, really odd. A quick debugging shows that on New window ephy thinks about:blank is loading, but on new tab doesn't.
Created attachment 207161 [details] [review] ephy-shell: handle new tabs for NULL addresses When calling ephy_shell_new_tab() with @address = NULL, ephy_shell_new_tab_full() will receive a NULL @request. This means that the tab is an empty WebKitWebView with status WEBKIT_LOAD_PROVISIONAL. Despite having the same visual outcome, it is more helpful to our signal handlers to explicitely load "about:blank".
Review of attachment 207161 [details] [review]: This code is fairly hairy (unfortunately), so I'd rather not change this without making sure it won't break anything else and, ideally, having some test coverage. Seems to me the trivial way to fix things (thanks for figuring it out) is to make New Window open about:blank, so let's just do that.
Created attachment 207170 [details] [review] ephy-shell: load home page in new windows Fixes the uncertain loading state of new windows. == Time capsule FIXME: ephy-shell sucks, needs cleanup.
Review of attachment 207170 [details] [review]: Go!
Comment on attachment 207170 [details] [review] ephy-shell: load home page in new windows Done! Attachment 207170 [details] pushed as 93f655b - ephy-shell: load home page in new windows
Damn you git-bz.