ephy-shell: load home page in new windows

Fixes the uncertain loading state of new windows.

https://bugzilla.gnome.org/show_bug.cgi?id=669130